about section created + html/css reorganization

--- a/index.html
+++ b/index.html
@@ -29,28 +29,58 @@
                 <ul>
                     <li><a href="#" class="selected">Inicio</a></li>
                     <li><a href="#about">Sobre</a></li>
-                    <li><a href="#tecnologias">Tecnologias</a></li>
+                    <li><a href="#tecnologies">Tecnologias</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <section id="presentation">
+        <div class="container">
+            <div class="presentation-content">
+                <h2>Olá, eu sou</h2>
+                <h1>Lucas Cordeiro de Lima</h1>
+                <h2 id="title-changer">Desenvolvedor Full-Stack</h2>
+                <div class="btn-container">
+                    <button class="presentation-bts"><i class="fa-brands fa-github"></i></button>
+                    <button class="presentation-bts"><i class="fa-brands fa-linkedin-in"></i></button>
+                </div>
+            </div>
+            <div class="presentation-photo">
+                <div class="ellipse"></div>
+                <img src="img/personal-photo.jpeg" alt="personal-img">
+            </div>
+        </div>
+    </section>
     <main>
         <section id="about">
             <div class="container">
                 <div class="about-content">
-                    <h2>Olá, eu sou</h2>
-                    <h1>Lucas Cordeiro de Lima</h1>
-                    <h2 id="title-changer">Desenvolvedor Full-Stack</h2>
-                    <div class="btn-container">
-                        <button class="about-bts"><i class="fa-brands fa-github"></i></button>
-                        <button class="about-bts"><i class="fa-brands fa-linkedin-in"></i></button>
+                    <h2 class="section-title">Sobre Mim:</h2>
+                    <p class="about-text">
+                        Sou um Desenvolvedor de Software apaixonado por criar soluções de software eficientes. Com experiência em diversas linguagens de programação e tecnologias, foco no desenvolvimento de aplicativos e APIs que aprimoram a experiência do usuário e otimizam processos.
+                        <br>Possuo graduação em Sistemas de Informação pela Pontifícia Universidade Católica do Paraná. Atuo como desenvolvedor desde 2022 com ferramentas como React, Java, Python entre outras tecnologias.
+                        <br>Minhas principais habilidades são:
+                    </p>
+                    <div class="about-cards">
+                        <div class="card">
+                            <i class="fas fa-code"></i>
+                            <p>2+ Anos de Experiência</p>
+                        </div>
+                        <div class="card">
+                            <i class="fa-solid fa-palette"></i>
+                            <p>UI/UX</p>
+                        </div>
+                        <div class="card">
+                            <i class="fa-solid fa-code-branch"></i>
+                            <p>Versionamento de Código</p>
+                        </div>
+                        <div class="card">
+                            <i class="fa-solid fa-gears"></i>
+                            <p>Metodologias Ágeis</p>
+                        </div>
                     </div>
-                </div>
-                <div class="about-photo">
-                    <div class="ellipse"></div>
-                    <img src="img/personal-photo.jpeg" alt="personal-img">
                 </div>
             </div>
         </section>
