tecnologies section finished

--- a/index.html
+++ b/index.html
@@ -84,6 +84,69 @@
                 </div>
             </div>
         </section>
+        <section id="tecnologies">
+            <div class="container">
+                <div class="tecnologies-content">
+                    <h2 class="section-title">Tecnologias e Ferramentas:</h2>
+                    <div class="tecnologies-lists-container">
+                        <div class="tec-list">
+                            <div class="card-tec">
+                                <i class="fa-brands fa-react"></i>
+                                <h1>React</h1>
+                                <p>Avançado</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-node"></i>
+                                <h1>NodeJS</h1>
+                                <p>Intermediário</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-python"></i>
+                                <h1>Python</h1>
+                                <p>Intermediário</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-js"></i>
+                                <h1>JavaScript</h1>
+                                <p>Avançado</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-css3-alt"></i>
+                                <h1>CSS</h1>
+                                <p>Avançado</p>
+                            </div>
+                        </div>
+                        <div class="tec-list">
+                            <div class="card-tec">
+                                <i><img id="csharp-logo" src="https://img.icons8.com/ios-filled/50/c-sharp-logo.png" alt="c-sharp-logo"/></i>
+                                <h1>C#</h1>
+                                <p>Básico</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-java"></i>
+                                <h1>Java</h1>
+                                <p>Intermediário</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-git-alt"></i>
+                                <h1>Git</h1>
+                                <p>Básico</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-solid fa-database"></i>
+                                <h1>SQL</h1>
+                                <p>Intermediário</p>
+                            </div>
+                            <div class="card-tec">
+                                <i class="fa-brands fa-aws"></i>
+                                <h1>AWS</h1>
+                                <p>Básico</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
