projects+contact sections finished

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#" class="selected">Inicio</a></li>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#tecnologies">Tecnologias</a></li>
-                    <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -57,7 +57,7 @@
         <section id="about">
             <div class="container">
                 <div class="about-content">
-                    <h2 class="section-title">Sobre Mim:</h2>
+                    <h2 class="section-title">Sobre Mim</h2>
                     <p class="about-text">
                         Sou um Desenvolvedor de Software apaixonado por criar soluções de software eficientes. Com experiência em diversas linguagens de programação e tecnologias, foco no desenvolvimento de aplicativos e APIs que aprimoram a experiência do usuário e otimizam processos.
                         <br>Possuo graduação em Sistemas de Informação pela Pontifícia Universidade Católica do Paraná. Atuo como desenvolvedor desde 2022 com ferramentas como React, Java, Python entre outras tecnologias.
@@ -87,7 +87,7 @@
         <section id="tecnologies">
             <div class="container">
                 <div class="tecnologies-content">
-                    <h2 class="section-title">Tecnologias e Ferramentas:</h2>
+                    <h2 class="section-title">Tecnologias e Ferramentas</h2>
                     <div class="tecnologies-lists-container">
                         <div class="tec-list">
                             <div class="card-tec">
@@ -147,6 +147,58 @@
                 </div>
             </div>
         </section>
+        <section id="projects">
+            <div class="container">
+                <div class="projects-content">
+                    <h2 class="section-title">Portfolio</h2>
+                    <div class="projects-cards">
+                        <div class="project-card">
+                            <img src="img/ccg-site.png" alt="Site Adoção de Gatos - Crazy Cat Gang">
+                            <div class="card-desc">
+                                <h2>Site para adoção de gatos</h2>
+                                <div class="card-btns">
+                                    <button>Site</button>
+                                    <button>Código</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/cel-poke.png" alt="App Pokedex Mobile Kotlin">
+                            <div class="card-desc">
+                                <h2>Pokedex Mobile</h2>
+                                <div class="card-btns">
+                                    <button>Código</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/web-scrap.jpg" alt="Código para webscraping em python">
+                            <div class="card-desc">
+                                <h2>Web Scraping em Python</h2>
+                                <div class="card-btns">
+                                    <button>Código</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <div class="contact-content">
+                    <h2 class="section-title">Contato</h2>
+                    <p>Gostou do que viu? Entre em contato!</p>
+                    <div class="social-media">
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>Lucas Cordeiro de Lima @ 2025</footer>
 </body>
 </html>
