links added + scroll movement

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="shortcut icon" href="img/favicon.svg">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- JS -->
-    <script src="js/scripts.js"></script>
+    
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/43bd8987e3.js" crossorigin="anonymous"></script>
     <!-- Fonts -->
@@ -27,7 +26,7 @@
             </div>
             <nav id="navbar">
                 <ul>
-                    <li><a href="#" class="selected">Inicio</a></li>
+                    <li><a href="#presentation">Inicio</a></li>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#tecnologies">Tecnologias</a></li>
                     <li><a href="#projects">Projetos</a></li>
@@ -43,8 +42,8 @@
                 <h1>Lucas Cordeiro de Lima</h1>
                 <h2 id="title-changer">Desenvolvedor Full-Stack</h2>
                 <div class="btn-container">
-                    <button class="presentation-bts"><i class="fa-brands fa-github"></i></button>
-                    <button class="presentation-bts"><i class="fa-brands fa-linkedin-in"></i></button>
+                    <a href="https://github.com/lucas-c-lima/" target="_blank" class="presentation-bts"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/lucascordeirodelima/" target="_blank" class="presentation-bts"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="presentation-photo">
@@ -157,8 +156,8 @@
                             <div class="card-desc">
                                 <h2>Site para adoção de gatos</h2>
                                 <div class="card-btns">
-                                    <button>Site</button>
-                                    <button>Código</button>
+                                    <a href="https://lucas-c-lima.github.io/ccg-site/" target="_blank">Site</a>
+                                    <a href="https://github.com/lucas-c-lima/ccg-site" target="_blank">Código</a>
                                 </div>
                             </div>
                         </div>
@@ -167,7 +166,7 @@
                             <div class="card-desc">
                                 <h2>Pokedex Mobile</h2>
                                 <div class="card-btns">
-                                    <button>Código</button>
+                                    <a href="https://github.com/lucas-c-lima/pokedex-kotlin" target="_blank">Código</a>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +175,7 @@
                             <div class="card-desc">
                                 <h2>Web Scraping em Python</h2>
                                 <div class="card-btns">
-                                    <button>Código</button>
+                                    <a href="https://github.com/lucas-c-lima/web-scrapping-test" target="_blank">Código</a>
                                 </div>
                             </div>
                         </div>
@@ -190,10 +189,10 @@
                     <h2 class="section-title">Contato</h2>
                     <p>Gostou do que viu? Entre em contato!</p>
                     <div class="social-media">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                        <a href="https://github.com/lucas-c-lima/"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/lucascordeirodelima/"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://wa.me/+5541997054996"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="mailto:lucascordeirodelima12@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -201,4 +200,6 @@
     </main>
     <footer>Lucas Cordeiro de Lima @ 2025</footer>
 </body>
+<!-- JS -->
+<script src="js/scripts.js"></script>
 </html>
