sidebar added (only pc version)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="img/favicon.svg">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/43bd8987e3.js" crossorigin="anonymous"></script>
     <!-- Fonts -->
@@ -31,10 +30,17 @@
                     <li><a href="#tecnologies">Tecnologias</a></li>
                     <li><a href="#projects">Projetos</a></li>
                     <li><a href="#contact">Contato</a></li>
+                    <li><i class="fas fa-gear" id="menu-toggle"></i></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <nav class="side-menu" id="side-menu">
+        <ul>
+            <li><a href="#">Light mode</a></li>
+            <li><a href="#">Change Language</a></li>
+        </ul>
+    </nav>
     <section id="presentation">
         <div class="container">
             <div class="presentation-content">
