css config media query <575px

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
             <nav id="navbar">
                 <ul>
-                    <li><a href="#presentation">Inicio</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#tecnologies">Tecnologias</a></li>
-                    <li><a href="#projects">Projetos</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <li class="on-pc"><a href="#presentation">Inicio</a></li>
+                    <li class="on-pc"><a href="#about">Sobre</a></li>
+                    <li class="on-pc"><a href="#tecnologies">Tecnologias</a></li>
+                    <li class="on-pc"><a href="#projects">Projetos</a></li>
+                    <li class="on-pc"><a href="#contact">Contato</a></li>
                     <li><i class="fas fa-gear" id="menu-toggle"></i></li>
                 </ul>
             </nav>
@@ -37,6 +37,11 @@
     </header>
     <nav class="side-menu" id="side-menu">
         <ul>
+            <li class="on-mobile"><a href="#presentation">Inicio</a></li>
+            <li class="on-mobile"><a href="#about">Sobre</a></li>
+            <li class="on-mobile"><a href="#tecnologies">Tecnologias</a></li>
+            <li class="on-mobile"><a href="#projects">Projetos</a></li>
+            <li class="on-mobile"><a href="#contact">Contato</a></li>
             <li><a href="#">Light mode</a></li>
             <li><a href="#">Change Language</a></li>
         </ul>
@@ -123,7 +128,7 @@
                         </div>
                         <div class="tec-list">
                             <div class="card-tec">
-                                <i><img id="csharp-logo" src="https://img.icons8.com/ios-filled/50/c-sharp-logo.png" alt="c-sharp-logo"/></i>
+                                <i id="i-csharp-logo"><img id="csharp-logo" src="https://img.icons8.com/ios-filled/50/c-sharp-logo.png" alt="c-sharp-logo"/></i>
                                 <h1>C#</h1>
                                 <p>Básico</p>
                             </div>
