--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <div class="about-content">
                     <h2 class="section-title">Sobre Mim</h2>
                     <p class="about-text">
-                        Sou um Desenvolvedor de Software apaixonado por criar soluções de software eficientes. Com experiência em diversas linguagens de programação e tecnologias, foco no desenvolvimento de aplicativos e APIs que aprimoram a experiência do usuário e otimizam processos.
-                        <br>Possuo graduação em Sistemas de Informação pela Pontifícia Universidade Católica do Paraná. Atuo como desenvolvedor desde 2022 com ferramentas como React, Java, Python entre outras tecnologias.
+                        Sou um <strong>Desenvolvedor de Softwares</strong> apaixonado por criar soluções de software eficientes. Com experiência em diversas linguagens de programação e tecnologias, foco no <strong>desenvolvimento de aplicativos</strong> e <strong>APIs</strong> que aprimoram a experiência do usuário e otimizam processos.
+                        <br>Possuo graduação em Sistemas de Informação pela Pontifícia Universidade Católica do Paraná. Atuo como desenvolvedor desde 2022 com ferramentas como <strong>React</strong>, <strong>Java</strong>, <strong>Python</strong> entre outras tecnologias.
                         <br>Minhas principais habilidades são:
                     </p>
                     <div class="about-cards">
