title mobile center fix

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <div class="presentation-content">
                 <h2>Olá, eu sou</h2>
                 <h1>Lucas Cordeiro de Lima</h1>
-                <h2 id="title-changer">Desenvolvedor Full-Stack</h2>
+                <div class="title-container">
+                    <h2 id="title-changer">Desenvolvedor Full-Stack</h2>
+                </div>
                 <div class="btn-container">
                     <a href="https://github.com/lucas-c-lima/" target="_blank" class="presentation-bts"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/lucascordeirodelima/" target="_blank" class="presentation-bts"><i class="fa-brands fa-linkedin-in"></i></a>
