--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="on-mobile"><a href="#tecnologies" id="navbar8">Tecnologias</a></li>
             <li class="on-mobile"><a href="#projects" id="navbar9">Projetos</a></li>
             <li class="on-mobile"><a href="#contact" id="navbar10">Contato</a></li>
-            <li><a id="btn-language" onclick="changeLanguage()">Change Language</a></li>
+            <li><a id="btn-language" onclick="changeLanguage(); toggleMenu()">Change Language</a></li>
         </ul>
     </nav>
     <section id="presentation">
