language btn location fix

--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
                     <li class="on-pc"><a href="#tecnologies" id="navbar3">Tecnologias</a></li>
                     <li class="on-pc"><a href="#projects" id="navbar4">Projetos</a></li>
                     <li class="on-pc"><a href="#contact" id="navbar5">Contato</a></li>
-                    <li class="on-pc"><a onclick="changeLanguage()" id="btn-language">
-                        <img src="./img/flag-brazil.png" alt="">
-                        <img src="./img/chevron-right-solid.svg" id="img-cl">
-                        <img src="./img/flag-us.png" alt="">
-                    </a></li>
                     <div class="menu-toggle on-mobile" id="menu-toggle">
                         <div class="bar"></div>
                         <div class="bar"></div>
@@ -43,6 +38,11 @@
                 </ul>
             </nav>
         </div>
+        <a onclick="changeLanguage()" id="btn-language" class="on-pc">
+            <img src="./img/flag-brazil.png" alt="">
+            <img src="./img/chevron-right-solid.svg" id="img-cl">
+            <img src="./img/flag-us.png" alt="">
+        </a>
     </header>
     <nav class="side-menu" id="side-menu">
         <ul>
